tests/negative/comptime/int_oob.orng
// int_oob.orng:5:22: error: error: integer is out of bounds for type `Int8`; value=150
// const x: Int8 = 100 + 50
//                     ^
// 
const x: Int8 = 100 + 50
fn main() -> Int8 {
    x
}